Fix navbar icons being wrong color in light mode

--- a/src/styles/modern/all.scss
+++ b/src/styles/modern/all.scss
@@ -374,10 +374,6 @@ variable-intellisense {
         }
     }
 
-    &[dark="true"] #header > header li svg.util-v2-icon-height-2N1T4 {
-        filter: Hue-Rotate(200deg) Invert(1) Saturate(2);
-    }
-
     // Schoology Popups
 
     .popups-box .popups-body,
